--- a/_posts/2014-5-26-6-40800.md
+++ b/_posts/2014-5-26-6-40800.md
@@ -1,98 +1,97 @@
 ---
 layout: post
-title: 第四百零八节 追击
+title: Chapter 408: The Pursuit
 category: 6
 path: 2014-5-26-6-40800.md
 tag: [normal]
 ---
 
-　　少年原本唯唯诺诺，此刻面色却露出不服的神情来。但是忌于他手中利剑，只嘀咕道：“官府除了要钱要粮，从来没什么好处……”
+The boy, who had been meek and submissive, now wore a look of defiance. But, wary of the sword in his hand, he only muttered, "The government never does anything good for us, except take our money and grain..."
 
-　　卓一凡喘了口气：“怎么叫没什么好处？尔等在海南这边陲蛮荒之地，坐享二百年的太平，衣食无忧，难道不是我大明的恩德？至于缴纳钱粮原本就是尔等的本分。再者我听你说过家中原是佃户，这钱粮还不是粮户们缴纳的……”
+Zhuo Yifan caught his breath. "What do you mean, 'nothing good'? You've enjoyed two hundred years of peace in this remote and barbaric land of Hainan, with food and clothing. Isn't that the grace of our great Ming Dynasty? As for paying taxes and grain, that is your duty. Besides, I heard you say your family were tenant farmers. Isn't it the landowners who pay the taxes?"
 
-　　“咱们这里首长来之前一直闹黎匪，官府从来也不管。再说粮户的钱粮，不也出在咱们佃户头上……”少年说，“周老爷家前些年年年都加租子，说是朝廷的旨意。倒是首长们来了之后，周老爷租子也不敢加了，还减了许多租子！”
+"Before the Chiefs arrived, we were constantly plagued by Li bandits, and the government never cared. Besides, the landowners' taxes are passed on to us tenants..." the boy said. "A few years ago, Old Master Zhou raised the rent every year, saying it was the court's decree. But after the Chiefs came, Old Master Zhou didn't dare to raise the rent anymore, and even reduced it by a lot!"
 
-　　卓一凡叹气道：“莫不是髡贼逼他减租子的？”
+Zhuo Yifan sighed. "Did the髡贼 force him to reduce the rent?"
 
-　　“那倒也没有，”少年说，“首长们在南宝开了许多产业，有矿场有铺子，还有大工厂，我爹娘没什么大本事，只会种地，便去农场做长工，虽说是苦活，好歹也是全家有吃有穿，如今房子也翻过了。比起给周老爷当佃户的时候半饥半饱的日子好多了，谁还去佃他的地？”说到这里他不由得有些小得意，“周老爷如今是求着别人去佃他的地，谁稀罕！”
+"Not really," the boy said. "The Chiefs have opened many businesses in Nanbao—mines, shops, and big factories. My parents aren't very skilled, they only know how to farm, so they went to work as long-term laborers on the farm. It's hard work, but at least our whole family has food to eat and clothes to wear, and we've even rebuilt our house. It's much better than the half-starved life we had as tenants for Old Master Zhou. Who would want to rent his land now?" At this, he couldn't help but feel a little proud. "Old Master Zhou is now begging people to rent his land, but who cares!"
 
-　　世上还有地主求着农户佃他的地的地方！卓一凡不由有些吃惊，他行走江湖，见多识广，主佃相争，为此闹出人命来得事情他见得多了：除非是地面上没了王法或者遇到了大灾之后农户流散；否则佃地这件事永远是卖方市场。主佃矛盾斗争主旨是“夺佃/反夺佃”和“加/减租子”。
+A place where landlords begged farmers to rent their land! Zhuo Yifan was astonished. He had traveled the world and seen much, and he had seen many disputes between landlords and tenants that ended in death. Unless there was no law in the land or a great disaster had scattered the farmers, renting land was always a seller's market. The main conflicts between landlords and tenants were over "seizing/resisting seizure of tenancy" and "raising/lowering rent."
 
-　　临高这世道也太奇怪了，粮户可是朝廷的根本，髡贼如此对待粮户，人心迟早丧失殆尽。他微微一叹，忽然觉得这些髡贼“治世”倒是颇为能干。只是奉行的不知是哪一家的歪理邪说，这般胡搞下去，真是白白浪费了他们的“百工商贾”之才。想到这里他不觉有些惋惜之情。不由自主的说道：“可惜了！髡贼即有鲁班之能。又精于陶朱之才，可惜习得不是正道。”说着他又看了眼少年。觉得他倒是个可造之才，叹息道，“髡贼真是误人子弟！尽是些无用的杂学！”
+The world of Lingao was too strange. The grain-producing households were the foundation of the court, yet the髡贼 treated them this way. Sooner or later, they would lose the hearts of the people. He sighed softly, suddenly feeling that these 髡贼 were quite capable of "governing." It was just that they followed some kind of perverse and heretical doctrine. If they continued this way, they would be wasting their talents in "commerce and industry." At this thought, he felt a sense of regret. He couldn't help but say, "What a pity! The 髡贼 have the skills of Lu Ban and the talent of Tao Zhu, but unfortunately, they have not learned the right path." He glanced at the boy again, feeling that he was a promising talent, and sighed, "The 髡贼 are truly misleading the youth! All this useless, miscellaneous knowledge!"
 
-　　卓一凡不知道这个时期的小孩学习兴趣最浓、求知欲最强的时候，别看这少年只不过上了几个月学，“澳洲人”在南宝已经有好几年了，他是看着南宝从一个山区荒芜的小村变成繁华的小镇，又是切身感受到生活的变化的一代新人。一听卓一凡对“首长”们的学问百般贬低，说读首长书没用。不由的辩了起来：“老爷你说这样的话太武断了吧，我将来学到首长的知识，就可以种出更多的稻子，织出更多的布匹，做出好用的农具，干起活更方便，咱们都可以住上瓦房，子子孙孙都不用再忍饥挨饿……”
+Zhuo Yifan didn't know that children of this age had the strongest interest in learning and the greatest thirst for knowledge. Although this boy had only been in school for a few months, the "Australians" had been in Nanbao for several years. He was part of a new generation that had watched Nanbao transform from a desolate mountain village into a bustling town, and had personally experienced the changes in their lives. Hearing Zhuo Yifan belittle the "Chiefs'" knowledge and say that studying their books was useless, he couldn't help but argue, "Sir, what you're saying is too arbitrary. In the future, when I learn the Chiefs' knowledge, I can grow more rice, weave more cloth, make better farm tools, and work more conveniently. We can all live in tiled houses, and our children and grandchildren will never have to go hungry again..."
 
-　　卓一凡一听，心中冷笑：髡贼原来靠画大饼来唬弄百姓的。泥腿子就是泥腿子，被这几句话就迷惑了。看他的面色虔诚。大约被蛊惑已深，也罢，自己身在不测。还费这个劲干啥，当下不在说话。
+Zhuo Yifan sneered inwardly. So the 髡贼 relied on making empty promises to deceive the common people. A bumpkin is a bumpkin, easily fooled by a few words. Seeing the boy's虔诚 expression, he was probably deeply deluded. Well, his own life was in danger, so why bother with this? He stopped talking.
 
-　　他受伤甚重，虽然有药物治疗，没有发炎，但是失血过多，昨晚又奔波了一夜。此刻说了一会话，只觉得头晕目眩，他警觉性甚浓，在意识到自己快要晕过去之前。迅速扯下一块烂布，将少年的嘴堵了起来。
+He was seriously injured. Although he had been treated with medicine and there was no inflammation, he had lost a lot of blood and had been on the run all night. After talking for a while, he felt dizzy. Being very alert, he quickly tore off a piece of rotten cloth and gagged the boy before he fainted.
 
-　　也不知过了多久。忽然感到身子被人一阵晃动，卓一凡睁开眼睛。却见是司马求道一脸焦急之色。
+He didn't know how much time had passed. Suddenly, he felt someone shaking him. Zhuo Yifan opened his eyes and saw Sima Qiudao's anxious face.
 
-　　“司马……”
+"Sima..."
 
-　　“那少年呢？！”司马求道冲口便问。
+"Where's the boy?!" Sima Qiudao blurted out.
 
-　　卓一凡吃了一惊，再往树旁看去，只见地上只剩下一根书包带。这书包带是帆布的，甚结实，但是质地甚硬，所以并未抽紧，还是被少年挣脱开了。
+Zhuo Yifan was startled. He looked at the tree and saw only a schoolbag strap on the ground. The strap was made of canvas, very strong, but also very stiff, so it hadn't been pulled tight, and the boy had managed to escape.
 
-　　“不好……”
+"Oh no..."
 
-　　“咱们快走。”司马求道道，“此地不宜久留！”说着便将卓一凡扶了起来。
+"Let's go, quickly," Sima Qiudao said. "We can't stay here!" He helped Zhuo Yifan up.
 
-　　“黄兄他们呢？”
+"What about Brother Huang and the others?"
 
-　　司马求道道：“我进得镇去，还没走多远，就听到前面喧哗，髡贼已派了一队倭寇，将黄家药铺围了！”他语气神情极为沉痛，“我也不敢再过去，便悄悄的出来了。”
+Sima Qiudao said, "I went into the town. I hadn't gone far when I heard a commotion ahead. The 髡贼 had sent a team of Japanese pirates to surround the Huang Family Pharmacy!" His tone and expression were extremely pained. "I didn't dare to go any closer, so I slipped away."
 
-　　卓一凡心中一沉，然而此时也顾不得许多了，如今是个人顾个人，唯有自求多福。
+Zhuo Yifan's heart sank, but he couldn't worry about that now. It was every man for himself.
 
-　　“咱们绕过南宝就是了，这里离开黎区不远了。”说着便用木棍支撑着身子往前走。
+"We'll just go around Nanbao. It's not far from the Li district." He supported himself with a wooden stick and started walking.
 
-　　司马求道看到卓一凡脸色苍白嘴唇没有什么血色，不由心中一紧。他抢过一步，一把用右手扶起了卓一凡，说到：“我扶着你走吧，天黑前咱们赶到番豹山，等天黑了就偷越关口。七爷说那里已经没有兵营了，只有个管卡，要过去容易。”
+Sima Qiudao saw that Zhuo Yifan's face was pale and his lips were bloodless, and his heart tightened. He took a step forward, supported Zhuo Yifan with his right hand, and said, "Let me help you. We'll reach Fanbao Mountain before dark, and then we'll sneak across the pass after nightfall. Seventh Master said there's no barracks there anymore, just a checkpoint, so it should be easy to get through."
 
-　　他们两个人互相搀扶着走下了山，穿过田埂往前面一座小山走去。虽然被搀扶着，但是卓一凡每走一步都感到伤口痛楚，特别肋下，只要稍稍的喘口气都疼半天。
+The two of them supported each other down the mountain, crossed the fields, and headed for a small hill in front of them. Although he was being supported, Zhuo Yifan felt a sharp pain in his wound with every step, especially under his ribs. Even a slight breath was agonizing.
 
-　　莫非自己要死了么？
+Am I going to die?
 
-　　他勉强拖动脚步，只觉得身子愈来愈重，头也渐渐发晕。
+He dragged his feet, feeling his body grow heavier and his head dizzier.
 
-　　因为担心被髡贼发现，两个人绕了一个很大的圈子，避开有人烟的地方，只拣山林茂密之处前行。这下愈发步履艰难。
+Worried about being discovered by the 髡贼, the two of them took a long detour, avoiding populated areas and sticking to the dense mountain forests. This made their progress even more difficult.
 
-　　一路前行，走了约有小半个时辰，司马求道见卓一凡摇摇晃晃得实在是走不动了，便在一块大石头背后坐了下来。
+After walking for about half an hour, Sima Qiudao saw that Zhuo Yifan was staggering and could barely walk, so he sat him down behind a large rock.
 
-　　“你且休息片刻，我去给你找些水来。”他说着解开卓一凡的衣服，却见血已经染红了绷带，知道这一路劳顿，伤口并未长好。
+"You rest for a moment. I'll go find you some water." He unbuttoned Zhuo Yifan's clothes and saw that the bandage was soaked with blood. He knew that the wound had not healed well due to the long journey.
 
-　　司马求道暗暗忧心：这样下去，卓一凡迟早要死在路上！
+Sima Qiudao worried secretly: If this continues, Zhuo Yifan will die on the road!
 
-　　现在唯一能期望的，就是能顺利逃入黎区，靠着接应的义士在当地的关系，看能不能寻个隐蔽的地方让他养伤。
+The only hope now was to escape into the Li district and rely on the connections of the righteous men there to find a hidden place for him to recover.
 
-　　他拿起竹筒正要去取水，卓一凡拉住了他的胳膊，沉声道：“你听！”
+He picked up the bamboo tube to get water, but Zhuo Yifan grabbed his arm and said in a low voice, "Listen!"
 
-　　司马求道侧耳倾听，并没有听到什么，他刚要说话，忽然一种奇怪的声音由远而近，从昨晚上歇脚的那座小山传来，好像是吼叫声。
+Sima Qiudao listened intently but heard nothing. Just as he was about to speak, a strange sound came from the small mountain where they had rested last night, getting closer and closer. It sounded like a roar.
 
-　　“似乎像狗叫。”司马求道道。然而这不是普通街面上看到的狗的叫声，那是一种类似咆哮的声音。司马求道赶紧拨开树从，朝着声音传来的地方望去。只见从对面山坡的树林子里面钻出来一只黑黄相间的狗，这条狗脑袋圆圆的，耷拉着耳朵，眼睛上面有两个大白点儿，看起来像四个眼睛，奇怪的事儿，这个狗看起来没有尾巴！
+"It sounds like a dog barking," Sima Qiudao said. But it wasn't the bark of a common street dog; it was a sound like a roar. Sima Qiudao quickly pushed aside the bushes and looked in the direction of the sound. He saw a black and yellow dog emerge from the woods on the opposite slope. The dog had a round head, drooping ears, and two large white spots above its eyes, making it look like it had four eyes. Strangely, the dog seemed to have no tail!
 
-　　狗的身后是三四个戴着漆笠，腰插肋胁，个子矮小结实的士兵，司马求道知道，这是髡贼蓄养的倭寇！
+Behind the dog were three or four short, sturdy soldiers wearing lacquered hats and with swords at their waists. Sima Qiudao knew that these were the Japanese pirates raised by the 髡贼!
 
-　　这条狗被一条链子拴着，有一个人牵着它，在地面不停的闻着，这狗大得出奇，和小牛犊子一样大。后面牵着的人几乎拉不住，总是把牵着它的人拖得一冲一冲，似乎要跌倒了。这时又从树林子里面陆续出来了三条同样的狗，都在地上不停的闻着。牵狗的人后面又出现了十多个带着鸟铳的军士，有倭寇亦有普通的士兵。其中一个军官模样的人身边站着一个少年，指指点点，司马求道大吃一惊：这就逃走得那个采药的少年！
+The dog was on a leash, held by a man, and was constantly sniffing the ground. The dog was surprisingly large, the size of a calf. The man holding it could barely control it, and was constantly being pulled forward, as if he was about to fall. Then, three more identical dogs emerged from the woods, all sniffing the ground. Behind the dog handlers were more than a dozen soldiers with muskets, both Japanese pirates and regular soldiers. Next to an officer-like figure stood a young boy, pointing and gesturing. Sima Qiudao was shocked: it was the herb-gathering boy who had escaped!
 
-　　卓一凡这会也看到了，他心中暗暗懊恼。但是此时再说什么也无用了。只能将身子缩起，尽量减少目标。
+Zhuo Yifan also saw it, and he cursed himself inwardly. But it was useless to say anything now. He could only curl up and try to make himself a smaller target.
 
-　　对面的狗在地上边闻边向这里走来，卓一凡小声道：“可能是闻到血迹的味道。”
+The dogs on the other side were sniffing the ground and walking towards them. Zhuo Yifan whispered, "They probably smelled the blood."
 
-　　“髨贼狡诈，竟然使此伎俩！”司马求道看着对面脸也没转过来，说：“卓老弟，咱们分开走，否则他们一旦上来，咱们一个走不掉。翻过这小山再走几里路就是番豹山了，你慢慢走，只要天黑前到就有机会晚上逃过去！”
+"The 髡贼 are cunning, to use such a trick!" Sima Qiudao said without turning his head. "Brother Zhuo, let's split up. Otherwise, if they catch up, neither of us will get away. Over this small hill and a few more miles is Fanbao Mountain. You go slowly. As long as you get there before dark, you'll have a chance to escape tonight!"
 
-　　他顿了一下又说：“我马上下山，穿过前面的那片山谷，走左边的那座小山上然后再去番豹山与你汇合”。
+He paused and then said, "I'll go down the mountain now, cross the valley in front, and take the small mountain on the left to meet you at Fanbao Mountain."
 
-　　卓一凡一惊，司马求道走得这条路几乎就在髡贼眼皮底下，那是故意要引开髨贼啊。
+Zhuo Yifan was shocked. The path Sima Qiudao was taking was almost under the noses of the 髡贼. He was deliberately trying to draw them away.
 
-　　“司马兄不可！我已身负重伤，怕是时辰不多了，你没有伤走得快，你走。留一凡在此拖住髨贼追兵，能杀一个是一个！”
+"Brother Sima, you can't! I'm seriously injured and probably don't have much time left. You're not injured and can walk fast. You go. Leave me here to hold off the 髡贼's pursuers. I'll kill as many as I can!"
 
-　　“卓老弟，不要推辞了，我司马求道是死人堆里爬出来，乱军丛中逃出性命的人，如今活着已经是赚了。再说我跑得快，髨贼必定全力追赶我一个，这样我跑的越远，你才有时间逃走——咱们走得一个是一个！”
+"Brother Zhuo, don't refuse. I, Sima Qiudao, have crawled out of piles of dead bodies and escaped from the chaos of battle. I'm already living on borrowed time. Besides, I run fast. The 髡贼 will definitely chase after me with all their might. The farther I run, the more time you'll have to escape—one of us has to make it!"
 
-　　边说着边把衣裤扎紧，把刀子往腰里掖了掖。
+As he spoke, he tightened his clothes and tucked his knife into his belt.
 
-　　“求道兄！”卓一凡哽咽着说不出话来了。
+"Brother Qiudao!" Zhuo Yifan was so choked up he couldn't speak.
 
-　　司马求道看了看他，故意一笑：“卓老弟，你怎么就知道我跑不脱？放心啦！当年鞑子骑兵都没追上我。几条狗又跑什么，咱们后会有期！”说罢双手一抱拳，道：“司马求道去也！”
+Sima Qiudao looked at him and deliberately smiled. "Brother Zhuo, how do you know I can't escape? Don't worry! Back then, the Tartar cavalry couldn't catch me. What are a few dogs? We'll meet again!" With that, he cupped his fists and said, "Sima Qiudao is off!"
 
-　　转身刚要走，司马求道突然又停了，他侧了下头背对着卓一凡说：“卓老弟，你若能逃出命来，有机会去北京的话，你替我去袁应泰袁大人的坟上烧一炷香，当初我给他当幕僚，辽阳城破的时候本该是陪着他死……走啦！”
-
+As he turned to leave, Sima Qiudao suddenly stopped. He turned his head slightly, his back to Zhuo Yifan, and said, "Brother Zhuo, if you can escape with your life and have the chance to go to Beijing, please burn a stick of incense at Lord Yuan Yingtai's grave for me. I was his advisor back then. When Liaoyang fell, I should have died with him... I'm going!"
